# sensR

./: .Rbuildignore  .coverage  .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  DESCRIPTION  MD5  NAMESPACE  NEWS  README.md  detailed-plans.md  functionality_inventory.csv  functionality_inventory_new.csv  generate_inventory.R  mkdocs.yml  plan-to-port.md  pyproject.toml  senspy_tutorial.ipynb
.ai-docs/: architecture.md  contributor.md  conventions.md  dependencies.md  gotchas.md  manifest.md
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-comment-gemini-review.yml  docs.yml  publish.yml  pytest.yml
R/: betaBin.R  discrim.R  discrimR.R  doublelinks.R  links.R  newPower.R  power.R  sample.size.R  twoAC.R  utils.R
benchmarks/: benchmark_betabinom.py
docs/: GAP_ANALYSIS.md  PORTING_PLAN.md  TESTING_STRATEGY.md  changelog.md  index.md
docs/api/: core.md  discrimination.md  index.md  models.md  plotting.md  power.md  roc.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: plotting.md  power.md  protocols.md
documentation/: eleventy.config.js  package.json
documentation/scripts/: generate_roc_plot.py
documentation/src/: index.md
inst/: CITATION
inst/doc/: methodology.Rnw  twoACexamples.Rnw
man/: AUC.Rd  AnotA.Rd  ROC.Rd  SDT.Rd  betabin.Rd  clls.Rd  clm2twoAC.Rd  confint.Rd  discrim.Rd  discrimPwr.Rd  discrimR.Rd  discrimSS.Rd  discrimSim.Rd  dod.Rd  dodControl.Rd  dodPwr.Rd  dodSim.Rd  dod_fit.Rd  dod_utils.Rd  dprime_posthoc.Rd  dprime_table.Rd  duotrio.Rd  findcr.Rd  hexad.Rd  plot.discrim.Rd  plot.samediff.Rd  profile.discrim.Rd  profile.samediff.Rd  rescale.Rd  samediff.Rd  samediffPwr.Rd  samediffSim.Rd  summary.samediff.Rd  tetrad.Rd  threeAFC.Rd  triangle.Rd  twoAC.Rd  twoACpwr.Rd  twoAFC.Rd  twofive.Rd  (+1 more)
notebooks/: tutorial.ipynb
scripts/: generate_golden_data.R
sensR/: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  LICENCE.note  NAMESPACE  NEWS  README.md
sensR-erroneous-copy/senspy/: __init__.py  plotting.py  utils.py
sensR-erroneous-copy/tests/: test_discrimination.py  test_links.py  test_utils.py
sensR/R/: betaBin.R  d.primeTest.R  discrimR.R  dod.R  doublelinks.R  links.R  power.R  sample.size.R  utils.R
sensR/man/: AnotA.Rd  ROC.Rd  SDT.Rd  betabin.Rd  clls.Rd  discrimPwr.Rd  discrimR.Rd  discrimSS.Rd  dod.Rd  dodControl.Rd  dodPwr.Rd  dodSim.Rd  dod_fit.Rd  dprime_compare.Rd  dprime_posthoc.Rd  dprime_test.Rd  findcr.Rd  hexad.Rd  plot.discrim.Rd  plot.samediff.Rd  profile.discrim.Rd  profile.samediff.Rd  rescale.Rd  samediff.Rd  sensR-deprecated.Rd  summary.samediff.Rd  tetrad.Rd  threeAFC.Rd  triangle.Rd  twoAC.Rd  twoACpwr.Rd  twoAFC.Rd  twofiveF.Rd
sensR/tests/: discrim.Rout.save  twoAC.R  twoAC.Rout.save
sensR/vignettes/: HSdata.RData  meth.bib  profileSigma.RData
senspy/: __init__.py  anota.py  betabin.py  discrim.py  discrimination.py  dod.py  dprime_tests.py  links.py  models.py  plotting.py  power.py  protocol_power.py  roc.py  samediff.py  simulation.py  twoac.py
senspy/core/: __init__.py  base.py  types.py
senspy/links/: __init__.py  double.py  psychometric.py
senspy/utils/: __init__.py  stats.py  transforms.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/GAP_ANALYSIS/: index.html
site/PORTING_PLAN/: index.html
site/TESTING_STRATEGY/: index.html
site/api/: index.html
site/changelog/: index.html
site/search/: search_index.json
tests/: __init__.py  betabin.Rout.save  conftest.py  test_anota.py  test_betabin.py  test_discrim.py  test_discrimination.py  test_dod.py  test_double_links.py  test_dprime_tests.py  test_links.py  test_models.py  test_plotting.py  test_power.py  test_protocol_power.py  test_roc.py  test_samediff.py  test_sensr_validation.py  test_simulation.py  test_twoac.py  test_types.py  test_utils.py  testdouble.R  twoAC.Rout.save  validate_against_sensR.R
tests/fixtures/: golden_links.json  golden_sensr.json
vignettes/: meth.bib  methodology.Rnw  twoAC.bib  twoACexamples.Rnw
(+35 files in other folders)
