[tool.poetry]
name = "senspy"
version = "0.0.1"
description = "Python port of the sensR package"
authors = ["sensPy Development Team <team@example.com>"]
license = "GPL-2.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.20"
scipy = ">=1.7"
pandas = ">=1.3"
matplotlib = ">=3.4"
statsmodels = ">=0.12"
numba = ">=0.53"
numdifftools = ">=0.9"

[tool.poetry.extras]
interactive = ["plotly"]
derivatives = ["jax", "jaxlib"]

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2"
hypothesis = ">=6.0"
flake8 = ">=3.9"
black = ">=22.0"
rpy2 = ">=3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
