[tool.poetry]
name = "senspy"
version = "0.0.1-dev"
description = "Python port of the sensR package for Thurstonian models in sensory discrimination"
authors = ["Aigora <team@aigora.com>"]
license = "GPL-2.0-or-later"
readme = "README.md"
homepage = "https://github.com/aigorahub/sensPy"
repository = "https://github.com/aigorahub/sensPy"
keywords = ["sensory", "discrimination", "thurstonian", "psychometrics", "statistics"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.23"
scipy = ">=1.9"
pandas = ">=1.5"
plotly = ">=5.15"
numba = ">=0.56"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"
hypothesis = ">=6.0"
ruff = ">=0.1"
black = ">=23.0"
mypy = ">=1.0"

[tool.poetry.group.rpy2]
optional = true

[tool.poetry.group.rpy2.dependencies]
rpy2 = ">=3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "rpy2: tests that require RPy2 and R installation",
    "slow: tests that take more than 1 second",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
